--- a/oficialia/src/app/pages/acuse/acuse.component.html
+++ b/oficialia/src/app/pages/acuse/acuse.component.html
@@ -8,7 +8,7 @@
     [opened]="(isHandset$ | async) === false"
   >
     <mat-toolbar>
-      <img src="transporte.png" alt="Logo" />
+      <img src="ofipa.png" alt="Logo" />
     </mat-toolbar>
 
     <mat-nav-list class="centered-list">
