--- a/oficialia/src/app/pages/main/main.component.html
+++ b/oficialia/src/app/pages/main/main.component.html
@@ -3,78 +3,92 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar><img src="transporte.png" alt="Logo"></mat-toolbar>
-    <mat-nav-list class="centered-list">
-      <a mat-list-item routerLink="/main">Inicio</a>
-      <a mat-list-item routerLink="/oficio">Oficio</a>
-      <!-- <a mat-list-item routerLink="/circular">Circulares</a> -->
-      <a mat-list-item routerLink="/agenda">Agenda</a>
-      <!-- <a mat-list-item routerLink="/report">Reportes</a> -->
-      <a mat-list-item routerLink="/user">Permisos y Roles</a>
+
+    <div class="sidenav-header">
+      <img src="transporte.png" alt="Logo" class="sidenav-logo" />
+    </div>
+
+    <mat-nav-list class="letra">
+      <a mat-list-item routerLink="/main" routerLinkActive="active-link">Oficios en Tramite</a>
+      <a mat-list-item routerLink="/oficio" routerLinkActive="active-link">Registro de Oficios</a>
+      <a mat-list-item routerLink="/circular" routerLinkActive="active-link">Generar Circular</a>
+      <a mat-list-item routerLink="/user" routerLinkActive="active-link">Permisos y Roles</a>
+        <a mat-list-item routerLink="/agenda" routerLinkActive="active-link">Agenda</a>
     </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar color="primary" class="main-toolbar">
       <button
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        <mat-icon>menu</mat-icon>
       </button>
-      <span>Sistema Integral de Oficialía de Partes</span>
-      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+
+      <span class="toolbar-title">Sistema Integral de Oficialía de Partes</span>
+
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Icono de usuario">
         <mat-icon>account_circle</mat-icon>
       </button>
+
       <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="onLogout()">
           <mat-icon>logout</mat-icon>
-          <span>Cerrar Sesion</span>
+          <span>Cerrar Sesión</span>
         </button>
       </mat-menu>
     </mat-toolbar>
 
-    <div>
-      <h6>Oficios en tramite</h6>
+    <div class="content-wrapper">
+    <div class="section-header">
+  <h6 class="section-title">Oficios en trámite</h6>
+          <mat-form-field appearance="outline" class="filter-field">
+    <mat-label>Buscar</mat-label>
+    <input matInput (input)="aplicarFiltro($event)" placeholder="Buscar" />
+  </mat-form-field>
+</div>
 
-      <!-- Tabla de oficios -->
-      <mat-table [dataSource]="oficios">
-        <!-- Columna de número -->
-        <ng-container matColumnDef="numero">
-          <mat-header-cell *matHeaderCellDef> Número </mat-header-cell>
-          <mat-cell *matCellDef="let oficio"> {{ oficio.numero }} </mat-cell>
-        </ng-container>
 
-        <!-- Columna de remitente -->
-        <ng-container matColumnDef="remitente">
-          <mat-header-cell *matHeaderCellDef> Remitente </mat-header-cell>
-          <mat-cell *matCellDef="let oficio"> {{ oficio.remitente }} </mat-cell>
-        </ng-container>
+  
+      <div class="table-container">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <!-- Columna de estatus -->
-        <ng-container matColumnDef="estatus">
-          <mat-header-cell *matHeaderCellDef> Estatus </mat-header-cell>
-          <mat-cell *matCellDef="let oficio"> {{ oficio.estatus }} </mat-cell>
-        </ng-container>
+          <!-- Número -->
+          <ng-container matColumnDef="numero">
+            <th mat-header-cell *matHeaderCellDef> Número </th>
+            <td mat-cell *matCellDef="let oficio"> {{ oficio.numero }} </td>
+          </ng-container>
 
-        <!-- Columna de dependencia -->
-        <ng-container matColumnDef="dependencia">
-          <mat-header-cell *matHeaderCellDef> Dependencia </mat-header-cell>
-          <mat-cell *matCellDef="let oficio"> {{ oficio.dependencia }} </mat-cell>
-        </ng-container>
+          <!-- Remitente -->
+          <ng-container matColumnDef="remitente">
+            <th mat-header-cell *matHeaderCellDef> Remitente </th>
+            <td mat-cell *matCellDef="let oficio"> {{ oficio.remitente }} </td>
+          </ng-container>
 
-        <!-- Columna de dependencia descripción -->
-        <ng-container matColumnDef="dependencia_des">
-          <mat-header-cell *matHeaderCellDef> Dependencia Destino </mat-header-cell>
-          <mat-cell *matCellDef="let oficio"> {{ oficio.dependencia_des }} </mat-cell>
-        </ng-container>
+          <!-- Estatus -->
+          <ng-container matColumnDef="estatus">
+            <th mat-header-cell *matHeaderCellDef> Estatus </th>
+            <td mat-cell *matCellDef="let oficio"> {{ oficio.estatus }} </td>
+          </ng-container>
 
-        <!-- Encabezado de la tabla -->
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <!-- Filas de la tabla -->
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-      </mat-table>
+          <!-- Dependencia -->
+          <ng-container matColumnDef="dependencia">
+            <th mat-header-cell *matHeaderCellDef> Dependencia </th>
+            <td mat-cell *matCellDef="let oficio"> {{ oficio.dependencia }} </td>
+          </ng-container>
+
+          <!-- Dependencia Destino -->
+          <ng-container matColumnDef="dependencia_des">
+            <th mat-header-cell *matHeaderCellDef> Dependencia Destino </th>
+            <td mat-cell *matCellDef="let oficio"> {{ oficio.dependencia_des }} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row"></tr>
+        </table>
+      </div>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
