--- a/oficialia/src/app/pages/oficio/oficio.component.html
+++ b/oficialia/src/app/pages/oficio/oficio.component.html
@@ -1,32 +1,43 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
-    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'"
-    [opened]="(isHandset$ | async) === false">
-    
-    <mat-toolbar>
-      <img src="transporte.png" alt="Logo transporte">
-    </mat-toolbar>
+      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+      [mode]="(isHandset$ | async) ? 'over' : 'side'"
+      [opened]="(isHandset$ | async) === false">
 
-    <mat-nav-list class="centered-list">
-      <a mat-list-item routerLink="/main">Inicio</a>
-      <a mat-list-item routerLink="/oficio">Oficio</a>
-      <!-- <a mat-list-item routerLink="/circular">Circulares</a> -->
-      <a mat-list-item routerLink="/agenda">Agenda</a>
-      <!-- <a mat-list-item routerLink="/report">Reportes</a> -->
-      <a mat-list-item routerLink="/user">Permisos y Roles</a>
+    <div class="sidenav-header">
+      <img src="transporte.png" alt="Logo" class="sidenav-logo" />
+    </div>
+
+    <mat-nav-list class="letra">
+      <a mat-list-item routerLink="/main" routerLinkActive="active-link">Oficios en Tramite</a>
+      <a mat-list-item routerLink="/oficio" routerLinkActive="active-link">Registro de Oficios</a>
+      <a mat-list-item routerLink="/circular" routerLinkActive="active-link">Generar Circular</a>
+      <a mat-list-item routerLink="/user" routerLinkActive="active-link">Permisos y Roles</a>
+      <a mat-list-item routerLink="/agenda" routerLinkActive="active-link">Agenda</a>
     </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
+    <mat-toolbar color="primary" class="main-toolbar">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      <span>Sistema Integral de Oficialía de Partes</span>
-      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menú de usuario">
+
+      <span class="toolbar-title">Sistema Integral de Oficialía de Partes</span>
+
+      <!-- <mat-form-field appearance="outline" class="filter-field">
+        <mat-label>Buscar</mat-label>
+        <input matInput (input)="aplicarFiltro($event)" placeholder="Buscar" />
+      </mat-form-field> -->
+
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Icono de usuario">
         <mat-icon>account_circle</mat-icon>
       </button>
+
       <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="onLogout()">
           <mat-icon>logout</mat-icon>
@@ -35,13 +46,14 @@
       </mat-menu>
     </mat-toolbar>
 
-    <div class="content">
-      <h6>Lista de Oficios</h6>
-      <button mat-raised-button color="primary" (click)="openOficioDialog()">Nuevo Oficio</button>
-      <button mat-raised-button color="primary" routerLink="/acuse">Generar Acuse</button>
+    <div class="content-wrapper">
+       <h6 class="section-title">Lista de Oficios</h6>
+      <div class="section-header">
+        <button mat-raised-button color="primary" (click)="openOficioDialog()">Nuevo Oficio</button>
+        <button mat-raised-button color="primary" routerLink="/acuse">Generar Acuse</button>
+      </div>
 
-      <!-- Tabla de Oficios -->
-      <div *ngIf="oficios && oficios.length > 0; else noData">
+      <div class="table-container" *ngIf="oficios && oficios.length > 0; else noData">
         <table mat-table [dataSource]="oficios" class="mat-elevation-z8">
 
           <!-- ID oculto -->
@@ -50,36 +62,43 @@
             <td mat-cell *matCellDef="let oficio" class="hidden">{{ oficio.id }}</td>
           </ng-container>
 
+          <!-- Número -->
           <ng-container matColumnDef="numero">
             <th mat-header-cell *matHeaderCellDef> Número </th>
             <td mat-cell *matCellDef="let oficio">{{ oficio.numero }}</td>
           </ng-container>
 
+          <!-- Remitente -->
           <ng-container matColumnDef="remitente">
             <th mat-header-cell *matHeaderCellDef> Remitente </th>
             <td mat-cell *matCellDef="let oficio">{{ oficio.remitente }}</td>
           </ng-container>
 
+          <!-- Asunto -->
           <ng-container matColumnDef="asunto">
             <th mat-header-cell *matHeaderCellDef> Asunto </th>
             <td mat-cell *matCellDef="let oficio">{{ oficio.asunto }}</td>
           </ng-container>
 
+          <!-- Dependencia -->
           <ng-container matColumnDef="dependencia">
             <th mat-header-cell *matHeaderCellDef> Dependencia </th>
             <td mat-cell *matCellDef="let oficio">{{ oficio.dependencia }}</td>
           </ng-container>
 
+          <!-- Área Destino -->
           <ng-container matColumnDef="dependencia_des">
-            <th mat-header-cell *matHeaderCellDef> Area Destino </th>
-            <td mat-cell *matCellDef="let oficio"> {{ oficio.dependencia_des }} </td>
+            <th mat-header-cell *matHeaderCellDef> Área Destino </th>
+            <td mat-cell *matCellDef="let oficio">{{ oficio.dependencia_des }}</td>
           </ng-container>
 
+          <!-- Estatus -->
           <ng-container matColumnDef="estatus">
             <th mat-header-cell *matHeaderCellDef> Estatus </th>
             <td mat-cell *matCellDef="let oficio">{{ oficio.estatus }}</td>
           </ng-container>
 
+          <!-- Archivo -->
           <ng-container matColumnDef="archivo">
             <th mat-header-cell *matHeaderCellDef> Archivo </th>
             <td mat-cell *matCellDef="let oficio">
@@ -87,9 +106,14 @@
                 Ver Documento
               </a>
               <span *ngIf="!oficio.archivo">No adjunto</span>
+            <button mat-icon-button (click)="openFileSelector(oficio)" *ngIf="!oficio.archivo">
+             <mat-icon>attach_file</mat-icon>
+            </button>
+
             </td>
           </ng-container>
 
+          <!-- Acciones -->
           <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> Acciones </th>
             <td mat-cell *matCellDef="let oficio">
@@ -99,15 +123,11 @@
               <button mat-icon-button (click)="onDelete(oficio)">
                 <mat-icon>delete</mat-icon>
               </button>
-              <button mat-icon-button (click)="openFileSelector(oficio)">
-                <mat-icon>archive</mat-icon>
-              </button>
             </td>
           </ng-container>
 
-          <!-- Cabeceras y filas -->
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row"></tr>
         </table>
       </div>
 
@@ -117,6 +137,6 @@
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
- 
+
 <!-- Input de archivo oculto -->
 <input type="file" id="fileInput" style="display: none" (change)="onFileSelected($event)" accept=".pdf,.jpg,.png" />
